2010-12-10  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=46573
        <rdar://problem/8479389> REGRESSION: charset="utf-8" (with quotes) doesn't work

        Test: http/tests/mime/quoted-charset.php

        * platform/network/cf/ResourceResponseCFNet.cpp: (WebCore::ResourceResponse::platformLazyInit):
        * platform/network/mac/ResourceResponseMac.mm: (WebCore::ResourceResponse::platformLazyInit):
        Work around a CFNetwork issue, strip quotes if they are present.

2010-12-10  Vincent Scheib  <scheib@chromium.org>

        Reviewed by James Robinson.

        Shader::loadShader() must initialize variable passed to getShaderiv
        https://bugs.webkit.org/show_bug.cgi?id=50842

        Test: fast/canvas/canvas-largedraws.html

        * platform/graphics/gpu/Shader.cpp:
        (WebCore::Shader::loadShader):

2010-12-10  Vincent Scheib  <scheib@chromium.org>

        Reviewed by James Robinson.

        Texture::updateSubRect should pass IntRect by reference
        https://bugs.webkit.org/show_bug.cgi?id=50845

        No test, changing to pass by ref.

        * platform/graphics/gpu/Texture.cpp:
        (WebCore::Texture::updateSubRect):
        * platform/graphics/gpu/Texture.h:

2010-12-10  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Move open and showModalDialog implementations from bindings into DOM class DOMWindow
        https://bugs.webkit.org/show_bug.cgi?id=50836

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::open): Removed most of the code and changed to call
        DOMWindow::open.
        (WebCore::DialogHandler::DialogHandler): Added. Object is used to handle the
        arguments and return value in showModalDialog.
        (WebCore::DialogHandler::dialogCreated): Ditto.
        (WebCore::DialogHandler::returnValue): Ditto.