@@ -1,3 +1,15 @@
+2010-12-10  John Knottenbelt  <jknotten@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Remove WebCore/platform/mac/GeolocationService.{h,mm}
+        https://bugs.webkit.org/show_bug.cgi?id=50074
+
+        Remove unused non-client-based geolocation code.
+
+        * platform/mac/GeolocationServiceMac.h: Removed.
+        * platform/mac/GeolocationServiceMac.mm: Removed.
+
 2010-12-10  Alexey Proskuryakov  <ap@apple.com>
 
         Reviewed by Darin Adler.
